testdata/zkc/invalid/basic_15.zkc
//error:3:4-8:unknown register
fn split(word:u32) -> (low:u8) {
   high::low = word
}
